--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Applying for a job</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -36,13 +36,13 @@
                             <span class="icon">
                                 <i class="fa fa-remove fa-fw"></i>
                             </span>
-                            <span>DELETE</span>
+                            <span class="delete">DELETE</span>
                         </span>
                         <span class="report">
                             <span class="icon">
                                 <i class="fa fa-flag fa-fw"></i>
                             </span>
-                            <span>REPORT</span>
+                            <span class="report">REPORT</span>
                         </span>
                     </div>
                 </div>
